# hop-client

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_changelog.sh
.github/ISSUE_TEMPLATE/: release-checklist.md  release.md  user-story.md
.github/PULL_REQUEST_TEMPLATE/: default_template.md  pull_request_template.md  release_template.md
.github/workflows/: build.yml  pypi_upload.yml  tag_release.yml  upload_codecov.yml  upload_conda.yml  upload_package.yml  upload_pypi.yml  verify.yml
doc/: Makefile  conf.py  index.rst
doc/_static/css/: my_theme.css
doc/_templates/: layout.html
doc/api/: api.rst  auth.rst  cli.rst  configure.rst  io.rst  models.rst  plugins.rst  publish.rst  robust_publisher.rst  subscribe.rst  version.rst
doc/user/: auth.rst  commands.rst  installation.rst  large_messages.rst  models.rst  quickstart.rst  robust_publication.rst  stream.rst
hop/: __init__.py  __main__.py  _bson.py  auth.py  avro_utils.py  cli.py  configure.py  http_scram.py  io.py  list_topics.py  models.py  publish.py  robust_publisher.py  subscribe.py  version.py
hop/plugins/: __init__.py
hop/utils/: cli.py
recipe/: meta.yaml  meta.yml
scimma-client/: meta.yaml
scimma/client/: __init__.py  __main__.py  io.py  models.py  publish.py  subscribe.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_configure.py  test_http_scram.py  test_io.py  test_models.py  test_publish.py  test_rpub.py  test_subscribe.py  test_version.py
tests/data/: example.gcn3  example_voevent.xml
tests/data/expected_data/: example_avro.stdout  example_blob.stdout  example_blob.txt.stdout  example_blob_json.stdout  example_gcn.gcn3.stdout  example_gcn.stdout  example_gcn_json.stdout  example_json.stdout  example_voevent.stdout  example_voevent.xml.stdout  example_voevent_json.stdout  gcn_circular_stdout.txt
tests/data/test_data/: example_avro.avro  example_blob.txt  example_gcn.gcn3  example_gcn.txt  example_json.json  example_voevent.xml
